--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="BLOCKCHAIN TERMINAL"
+            android:text="DL CHAIN TERMINAL"
             android:gravity="center"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
